@@ -1,3 +1,10 @@
+2009-04-15  Stefan Kost  <ensonic@users.sf.net>
+
+	* autogen.sh:
+	* configure.in:
+	  Tentative patch to allow building without scrollkeeper and
+	  gnome-doc-utils. Fixes #577059.
+
 2009-04-05  Stefan Kost  <ensonic@users.sf.net>
 
 	* examples/Makefile.am:
